mario/mario-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mario-deployment
  namespace: external
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mario
  template:
    metadata:
      labels:
        app: mario
    spec:
      containers:
      - name: mario-container
        image: apurvajo/mariohtml5
