mario/mario-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mario-service
  namespace: external
spec:
  ports:
  - name: http
    targetPort: 8080 
    port: 80
  selector:
    app: mario
